--- a/app/src/main/res/layout/list_item_entry.xml
+++ b/app/src/main/res/layout/list_item_entry.xml
@@ -29,7 +29,7 @@
         android:maxLines="1"
         android:paddingEnd="16dp"
         android:singleLine="true"
-        textInJapanese="@{presenter.kanjiOrReading()}"
+        textInJapanese="@{presenter.kanjiOrReading}"
         android:textSize="@dimen/text_size_list_heading"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -45,7 +45,7 @@
         android:textAlignment="viewStart"
         android:maxLines="1"
         android:singleLine="true"
-        textInJapanese="@{presenter.reading()}"
+        textInJapanese="@{presenter.reading}"
         android:textSize="@dimen/text_size_body"
         app:layout_constraintBaseline_toBaselineOf="@id/li_kanji"
         app:layout_constraintBottom_toBottomOf="@+id/li_kanji"
