--- a/app/src/main/res/layout/content_drawer.xml
+++ b/app/src/main/res/layout/content_drawer.xml
@@ -1,53 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<layout>
-
-  <FrameLayout
-      xmlns:android="http://schemas.android.com/apk/res/android"
-      xmlns:app="http://schemas.android.com/apk/res-auto"
-      xmlns:tools="http://schemas.android.com/tools"
+<layout xmlns:android="http://schemas.android.com/apk/res/android">
+  <androidx.fragment.app.FragmentContainerView
+      android:id="@+id/drawer_content_fragment"
+      android:paddingTop="?attr/actionBarSize"
       android:layout_width="match_parent"
-      android:layout_height="match_parent"
-      android:background="@color/background"
-      app:layout_behavior="@string/appbar_scrolling_view_behavior"
-      tools:context=".ui.activities.DrawerActivity"
-      tools:showIn="@layout/app_bar_drawer"
-      >
-
-    <ProgressBar
-        android:id="@+id/exporting"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
-        android:layout_gravity="top"
-        android:indeterminate="false"
-        android:visibility="gone"
-        />
-
-    <ProgressBar
-        android:id="@+id/loading"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        />
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/search_results_rv"
-        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        />
-
-    <TextView
-        android:id="@+id/no_results"
-        android:layout_marginTop="24dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
-        android:textSize="@dimen/text_size_body"
-        app:fontFamily="sans-serif"
-        android:visibility="gone"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
-
-  </FrameLayout>
+      android:layout_height="match_parent" />
 </layout>
