--- a/app/src/main/res/layout/app_bar_drawer.xml
+++ b/app/src/main/res/layout/app_bar_drawer.xml
@@ -34,6 +34,8 @@
 
   </com.google.android.material.appbar.AppBarLayout>
 
-  <include layout="@layout/content_drawer"/>
+  <include
+      android:id="@+id/content_drawer"
+      layout="@layout/content_drawer"/>
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
