--- a/app/src/main/res/layout/activity_drawer.xml
+++ b/app/src/main/res/layout/activity_drawer.xml
@@ -11,6 +11,7 @@
     >
 
   <include
+      android:id="@+id/app_bar_drawer"
       layout="@layout/app_bar_drawer"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
