--- a/app/src/main/res/layout/list_item_entry.xml
+++ b/app/src/main/res/layout/list_item_entry.xml
@@ -13,6 +13,7 @@
   </data>
 
   <androidx.constraintlayout.widget.ConstraintLayout
+      android:id="@+id/li_container"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:focusable="true"
