--- a/app/src/main/res/layout/fragment_entry_list.xml
+++ b/app/src/main/res/layout/fragment_entry_list.xml
@@ -2,23 +2,25 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".ui.activities.DrawerActivity"
-    tools:showIn="@layout/app_bar_drawer">
+    tools:context=".ui.activities.DrawerActivity">
 
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/background"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior">
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"
+        >
 
         <ProgressBar
             android:id="@+id/exporting"
+            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
             android:layout_gravity="top"
             android:indeterminate="false"
+            tools:progress="50"
             android:visibility="gone"
+            tools:visibility="visible"
             />
 
         <ProgressBar
@@ -26,25 +28,29 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            tools:visibility="visible"
             />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/search_results_rv"
-            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            tools:visibility="visible"
             />
 
         <TextView
             android:id="@+id/no_results"
-            android:layout_marginTop="24dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
+            android:layout_marginTop="24dp"
             android:layout_marginEnd="16dp"
             android:textSize="@dimen/text_size_body"
-            app:fontFamily="sans-serif"
             android:visibility="gone"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            app:fontFamily="sans-serif"
+            tools:visibility="gone"
+            />
 
     </FrameLayout>
 
